--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,5 +1,5 @@
 <header>
-    <!-- @@include('../dev-html/header-info.html',{})
-    @@include('../dev-html/header-detailed.html',{})
-    @@include('../dev-html/header-chapter.html',{}) -->
+    @@include('../dev-html/menu.html',{})
+    <!-- @@include('../dev-html/header-detailed.html',{}) -->
+    <!-- @@include('../dev-html/header-chapter.html',{}) -->
 </header>
