--- a/src/index.html
+++ b/src/index.html
@@ -3,5 +3,7 @@
     <main>
         
         @@include('dev-html/firstscreen.html',{})
+        @@include('dev-html/vibori-nas.html',{})
+
     </main>
 @@include('./html/footer.html',{})
