--- a/src/dev-html/firstscreen.html
+++ b/src/dev-html/firstscreen.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
 
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
@@ -19,7 +19,7 @@
                     <div class="btn-two">
                         <button type="button" class="btn btn-carusel"> <div class="text-carusel">Рассчитать стоимость<i class="right1"></i>  <div> </button>
                     </div>
-                    <h2 class="text-bnt-t">Прямое КАРГО из Китая</h2>
+                    <h2 class="text-bnt-t">Прямое КАРГО из Китая</h2>                     
                     <p>Доставляем любые грузы из Китая по честной цене</p>
                 </div>
             </div>
