--- a/src/dev-html/menu.html
+++ b/src/dev-html/menu.html
@@ -1,4 +1,5 @@
-<div class="container ">
+<div class="container-fluid">
+    <div class="container">
     <div class="menu-header">
         <nav class="navbar navbar-expand-lg  ">
             <div class=" container-fluid">
@@ -35,4 +36,5 @@
             </div>
         </nav>
     </div>
+</div>
 </div>
