--- a/src/dev-html/vibori-nas.html
+++ b/src/dev-html/vibori-nas.html
@@ -1,4 +1,5 @@
-<div class="container">
+<div class="container-fluid">
+    <div class="container">
     <div class="vibor">
     <div></div>
         <h1 class="vibor-text">Почему стоит выбрать именно нас?</h1>
@@ -57,4 +58,5 @@
         </div>
 
     </div>
+</div>
 </div>
