--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,13 @@
         
         @@include('dev-html/firstscreen.html',{})
         @@include('dev-html/vibori-nas.html',{})
+        @@include('dev-html/dostavka.html',{})
+        @@include('dev-html/uslugi.html',{})
+        @@include('dev-html/o-kompanii.html',{})
+
+        
+
+
 
     </main>
 @@include('./html/footer.html',{})
