--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
         @@include('dev-html/dostavka.html',{})
         @@include('dev-html/uslugi.html',{})
         @@include('dev-html/o-kompanii.html',{})
+        @@include('dev-html/voprosy.html',{})
+
+       
 
         
 
