--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
         @@include('dev-html/uslugi.html',{})
         @@include('dev-html/o-kompanii.html',{})
         @@include('dev-html/voprosy.html',{})
+        @@include('dev-html/sotrydnichestvo.html',{})
 
        
 
