--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,8 +1,54 @@
 <footer>
+    <div class="container-fluid">
+        <div class="container">
+            <div class="footer-info row">
+                <div class="footer-first col-md-4 col-sm-4 col-lg-2">
+                    <ul>
+                        <li><img src="../img/logo.png" alt="..."></li>
+                        <li><img src="../img/instagram.png" alt="..."></li>
+                        <li><img src="../img/VK.png" alt="..."></li>
+                        <li><img src="../img/telegram.png" alt="..."></li>
+
+                    </ul>
+                </div>
+                <div class="footer-second col-md-4 col-sm-4 col-lg-2">
+                    <ul class="text-footer">
+                        <li class="footer-nav-title">Грузоперевозки</li>
+                        <li><a href="#">Цены и сроки</a></li>
+                        <li><a href="#">Услуги</a></li>
+                        <li><a href="#">О компании</a></li>
+                        <li><a href="#">Контакты</a></li>
+                        <li><a href="#">Оформить груз</a></li>
+                    </ul>
+                </div>
+                <div class="footer-three col-md-4 col-sm-4 col-lg-2">
+                    <ul class="text-footer">
+                        <li class="footer-nav-title">Выкуп товара</li>
+                        <li><a href="#"> Страховка груза</a></li>
+                        <li><a href="#">Аренда склада</a></li>
+                        <li><a href="#"> Перевод денежных средств</a></li>
+                    </ul>
+                </div>
+                <div class="footer-four col-md-4 col-sm-4 col-lg-2">
+                    <ul class="text-footer">
+                        <li class="footer-nav-title">Информация</li>
+                        <li><a href="#">Отзывы </a></li>
+                        <li><a href="#">Требования к грузу</a></li>
+                        <li><a href="#">Договор-оферта</a></li>
+                        <li><a href="#">Как заключить договор</a></li>
+                        <li><a href="#">Способы оплаты</a></li>
+                        <li><a href="#">Документы </a></li>
+                        <li><a href="#">Статьи</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </footer>
-    
 
-    <script src="../js/app.min.js"></script>
-    </body>
+
+<script src="../js/app.min.js"></script>
+</body>
+
 </html>
