--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,9 @@
     <main>
         
         @@include('dev-html/firstscreen.html',{})
-        @@include('dev-html/vibori-nas.html',{})
+        @@include('dev-html/price.html',{})
+
+        @@include('dev-html/vibori-nas.html',{})  
         @@include('dev-html/dostavka.html',{})
         @@include('dev-html/uslugi.html',{})
         @@include('dev-html/o-kompanii.html',{})
