--- a/src/dev-html/o-kompanii.html
+++ b/src/dev-html/o-kompanii.html
@@ -8,7 +8,7 @@
                     <div class=" text-razkaz col-md-6 col-sm-12">Компания Азия Карго - это полный комплекс логистических
                         услуг по
                         доставке грузов из Китая в Россию - сборные грузы и цельные товарные партии, услуги посредника
-                        ТаоБао, КАРГО Китай-Россия. Для вашего удобства есть тарифы на лёгкий и тяжелый куб. Мы работаем
+                        ТаоБао, КАРГО Китай-Украина. Для вашего удобства есть тарифы на лёгкий и тяжелый куб. Мы работаем
                         на
                         рынке более 4 лет, а руководители компании занимаются логистикой уже более 11 лет.
                         Мы стремимся предоставить лучшие условия доставки и лучший сервис своим клиентам. Выбирая нас -
