--- a/src/dev-html/voprosy.html
+++ b/src/dev-html/voprosy.html
@@ -7,7 +7,7 @@
         </div>
         <div class="container-vopros row">
 
-            <div class="col-md-9 col-sm-12">
+            <div class="col-md-8 col-sm-12">
                 <div class="accordion" id="accordionPanelsStayOpenExample">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="panelsStayOpen-headingOne">
@@ -122,9 +122,9 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 col-sm-12">
+            <div class="col-md-4 col-sm-12">
                 <div class="card">
-                    <div class="container-vopros">
+                    <div class="container-vopros-dop">
                         <form>
                         
                             <label class="vopros-label" for="fname">Имя*</label><br>
