vibor/choice rename

--- a/src/dev-html/about-we.html
+++ b/src/dev-html/about-we.html
@@ -1,11 +1,11 @@
 <div class="container-fluid">
     <div class="container">
-        <div class="vibor">
+        <div class="choice">
             <div></div>
-            <h1 class="vibor-text">Почему стоит выбрать именно нас?</h1>
+            <h1 class="choice-text">Почему стоит выбрать именно нас?</h1>
             <div class="line"> __________________ </div>
         </div>
-        <div class="vibor-info">
+        <div class="choice-info">
 
 
 
