--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
         @@include('dev-html/firstscreen.html',{})
         @@include('dev-html/price.html',{})
 
-        @@include('dev-html/vibori-nas.html',{})  
+        @@include('dev-html/about-we.html',{})  
         @@include('dev-html/dostavka.html',{})
         @@include('dev-html/uslugi.html',{})
         @@include('dev-html/o-kompanii.html',{})
