--- a/src/dev-html/about-we.html
+++ b/src/dev-html/about-we.html
@@ -11,50 +11,50 @@
 
             
                 <div class="card">
-                    <img class="displayed" src="../img/tamoj.png" class="card-img-top" alt="...">
+                    <img class="displayed" src="../img/tamoj.png" class="card-img-top" alt="rename">
                     <div class="card-body">
                         <p class="card-text">Таможенное оформление груза</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img class="displayed" src="../img/strahovka.png" class="card-img-top" alt="...">
+                    <img class="displayed" src="../img/strahovka.png" class="card-img-top" alt="rename">
                     <div class="card-body">
                         <p class="card-text">Страховка груза</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img class="displayed" src="../img/proverka.png" class="card-img-top" alt="...">
+                    <img class="displayed" src="../img/proverka.png" class="card-img-top" alt="rename">
                     <div class="card-body">
                         <p class="card-text">Проверка товара на брак</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img class="displayed" src="../img/dostavka.png" class="card-img-top" alt="...">
+                    <img class="displayed" src="../img/dostavka.png" class="card-img-top" alt="rename">
                     <div class="card-body">
                         <p class="card-text">Доставка в любой город
                         </p>
                     </div>
                 </div>
                 <div class="card">
-                    <img class="displayed" src="../img/konsolud.png" class="card-img-top" alt="...">
+                    <img class="displayed" src="../img/konsolud.png" class="card-img-top" alt="rename">
                     <div class="card-body">
                         <p class="card-text">Консолидация на складе</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img class="displayed" src="../img/like.png" class="card-img-top" alt="...">
+                    <img class="displayed" src="../img/like.png" class="card-img-top" alt="rename">
                     <div class="card-body">
                         <p class="card-text">Ответственное хранение груза</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img class="displayed" src="../img/credit.png" class="card-img-top" alt="...">
+                    <img class="displayed" src="../img/credit.png" class="card-img-top" alt="rename">
                     <div class="card-body">
                         <p class="card-text">Помощь в оплате товара</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img class="displayed" src="../img/upakovka.png" class="card-img-top" alt="...">
+                    <img class="displayed" src="../img/upakovka.png" class="card-img-top" alt="rename">
                     <div class="card-body">
                         <p class="card-text">Упаковка, переупаковка, паллетирование груза к международной перевозке</p>
                     </div>
