--- a/src/dev-html/price.html
+++ b/src/dev-html/price.html
@@ -4,39 +4,44 @@
             <form class="input-row">
                 <div class="input-box">
                     <label for="fname">Ваше ФИО:</label>
-                    <input type="text" id="fname" name="fname" placeholder="123-45-678">
+                    <input type="text" id="fname" name="fname" placeholder="Ваше ФИО:">
                 </div>
                 <div class="input-box">
                     <label for="lname">Ваша почта:</label>
-                    <input type="text" id="lname" name="lname" placeholder="HUY">
+                    <input type="text" id="lname" name="lname" placeholder="Ваша почта:">
                 </div>
                 <div class="input-box">
-                    <label for="fname">Ваше ФИО:</label>
-                    <input type="text" id="fname" name="fname" placeholder="123-45-678">
+                    <label for="fname">Категория товара:</label>
+                    <input type="text" id="fname" name="fname" placeholder="Категория товара:">
                 </div>
                 <div class="input-box">
-                    <label for="lname">Ваша почта:</label>
-                    <input type="text" id="lname" name="lname" placeholder="HUY">
+                    <label for="lname">Стоимость груза:</label>
+                    <input type="text" id="lname" name="lname" placeholder="Стоимость груза:">
                 </div>
                 <div class="input-box">
-                    <label for="fname">Ваше ФИО:</label>
-                    <input type="text" id="fname" name="fname" placeholder="123-45-678">
+                    <label for="fname">Вес груза (кг):</label>
+                    <input type="text" id="fname" name="fname" placeholder="Вес груза (кг):">
                 </div>
                 <div class="input-box">
-                    <label for="lname">Ваша почта:</label>
-                    <input type="text" id="lname" name="lname" placeholder="HUY">
+                    <label for="lname">Объем груза (м3):</label>
+                    <input type="text" id="lname" name="lname" placeholder="Объем груза (м3):">
                 </div>
                 <div class="input-box">
-                    <input type="checkbox">
-                    <input type="checkbox">
+                    <div class="checkbox">
+                        <input id="check1" type="checkbox" name="check" value="check1">
+                        <label for="check1">Страховка</label>
+                        <br><br>
+                        <input id="check2" type="checkbox" name="check" value="check2">
+                        <label for="check2">Таможенное оформление</label>
+                    </div>
                 </div>
                 <div class="input-box">
-                    <label for="lname">Ваша почта:</label>
-                    <input type="text" id="lname" name="lname" placeholder="HUY">
+                    <label for="lname">Код ТН ВЭД:</label>
+                    <input type="text" id="lname" name="lname" placeholder="Код ТН ВЭД:">
                 </div>
                 <div class="input-box">
-                   <button>Следующий шаг</button>
-                </div>
+                    <button type="button" class="btn btn-vopros"> <div class="text-vopros">Отправить запрос<i class="right2"></i>  <div> </button>
+                    </div>
             </form>
             <div class="img-box">
                 <img src="/img/man.png" class="img-fluid d-none d-lg-block" alt="man">
