--- a/src/dev-html/voprosy.html
+++ b/src/dev-html/voprosy.html
@@ -123,29 +123,35 @@
                 </div>
             </div>
             <div class="col-md-4 col-sm-12">
-                <div class="card">
-                    <div class="container-vopros-dop">
-                        <form>
-                        
-                            <label class="vopros-label" for="fname">Имя*</label><br>
-                            <input type="text" id="fname" name="fname"><br>
-                            <label class="vopros-label" for="lname">Телефон*</label><br>
-                            <input type="text" id="lname" name="lname"><br>
-                            <label class="vopros-label" for="email">E-mail*</label><br>
-                            <input type="text" id="email" name="email"><br>
-                            <label class="vopros-label" for="vvopros">Ваш вопрос</label><br>
-                            <input type="text" id="vvopros" name="vvopros"><br>
-                        </form>
-                        <div class="card-body">
-                            <button type="button" class="btn btn-vopros"> <div class="text-vopros">Отправить запрос<i class="right2"></i>  <div> </button>
 
-
-                        </div>
+                <div class="container-vopros-dop">
+                    <div class="text-question"> Остались вопросы?</div>
+                    <div class="text-question-time">Оставьте заявку и наш менеджер ответит вам в ближайшее время</div>
+                    <div class="input-box">
+                        <label for="fname">Ваше ФИО:</label>
+                        <input type="text" id="fname" name="fname" placeholder="Ваше ФИО:">
                     </div>
-                </div>
+                    <div class="input-box">
+                        <label for="fname">Ваш телефон:</label>
+                        <input type="text" id="fname" name="fname" placeholder="+38 (0 .. ..) .. .. - .. .. - .. .. ..">
+                    </div>
+                    <div class="input-box">
+                        <label for="fname">Ваша почта:</label>
+                        <input type="text" id="fname" name="fname" placeholder="Ваше почта:">
+                    </div>
+                    <div class="input-box">
+                        <label for="fname">Ваше вопрос:</label>
+                        <input type="text" id="fname" name="fname" placeholder="Ваше вопрос:">
+                    </div>
 
+                    <div class="input-box">
+                        <button type="button" class="btn btn-vopros"> <div class="text-vopros">Отправить запрос<i class="right2"></i>  <div> </button>
+                        </div>
+                </div>
             </div>
+
         </div>
     </div>
+</div>
 
 </div>
