--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -4,10 +4,10 @@
             <div class="footer-info row">
                 <div class="footer-first col-md-4 col-sm-4 col-lg-2">
                     <ul>
-                        <li><img src="../img/logo.png" alt="..."></li>
-                        <li><img src="../img/instagram.png" alt="..."></li>
-                        <li><img src="../img/VK.png" alt="..."></li>
-                        <li><img src="../img/telegram.png" alt="..."></li>
+                        <li><img src="../img/logo.png" alt="rename"></li>
+                        <li><img src="../img/instagram.png" alt="rename"></li>
+                        <li><img src="../img/VK.png" alt="rename"></li>
+                        <li><img src="../img/telegram.png" alt="rename"></li>
 
                     </ul>
                 </div>
