--- a/src/dev-html/about-company.html
+++ b/src/dev-html/about-company.html
@@ -1,21 +1,23 @@
 <div class="container-fluid">
     <div class="container">
-        <div class="container-o-kompanii">
-            <h2 class="text-kompanii">О компании</h2>
+
+        <div class="container-about-company">
+            <h2 class="text-about-company">О компании</h2>
             <div class="line-k"> _______________ </div>
             <div class="container">
                 <div class="row">
                     <div class=" text-razkaz col-md-6 col-sm-12">Компания Азия Карго - это полный комплекс логистических
                         услуг по
                         доставке грузов из Китая в Россию - сборные грузы и цельные товарные партии, услуги посредника
-                        ТаоБао, КАРГО Китай-Украина. Для вашего удобства есть тарифы на лёгкий и тяжелый куб. Мы работаем
+                        ТаоБао, КАРГО Китай-Украина. Для вашего удобства есть тарифы на лёгкий и тяжелый куб. Мы
+                        работаем
                         на
                         рынке более 4 лет, а руководители компании занимаются логистикой уже более 11 лет.
                         Мы стремимся предоставить лучшие условия доставки и лучший сервис своим клиентам. Выбирая нас -
                         вы
                         выбираете качественную доставку оптимальную по цене и времени! Убедитесь в этом сами!</div>
                     <div class="col-md-6 col-sm-12">
-                        <div class="fotokompanii"></div>
+                        <div class="foto-about-company"></div>
                     </div>
                 </div>
             </div>
