--- a/src/dev-html/about-we.html
+++ b/src/dev-html/about-we.html
@@ -11,32 +11,32 @@
 
             
                 <div class="card">
-                    <img class="displayed" src="../img/tamoj.png" class="card-img-top" alt="rename">
+                    <img class="displayed" src="../img/customs.png" class="card-img-top" alt="rename">
                     <div class="card-body">
                         <p class="card-text">Таможенное оформление груза</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img class="displayed" src="../img/strahovka.png" class="card-img-top" alt="rename">
+                    <img class="displayed" src="../img/insurance.png" class="card-img-top" alt="rename">
                     <div class="card-body">
                         <p class="card-text">Страховка груза</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img class="displayed" src="../img/proverka.png" class="card-img-top" alt="rename">
+                    <img class="displayed" src="../img/examination.png" class="card-img-top" alt="rename">
                     <div class="card-body">
                         <p class="card-text">Проверка товара на брак</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img class="displayed" src="../img/dostavka.png" class="card-img-top" alt="rename">
+                    <img class="displayed" src="../img/delivery.png" class="card-img-top" alt="rename">
                     <div class="card-body">
                         <p class="card-text">Доставка в любой город
                         </p>
                     </div>
                 </div>
                 <div class="card">
-                    <img class="displayed" src="../img/konsolud.png" class="card-img-top" alt="rename">
+                    <img class="displayed" src="../img/сonsolidation.png" class="card-img-top" alt="rename">
                     <div class="card-body">
                         <p class="card-text">Консолидация на складе</p>
                     </div>
@@ -54,7 +54,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img class="displayed" src="../img/upakovka.png" class="card-img-top" alt="rename">
+                    <img class="displayed" src="../img/package.png" class="card-img-top" alt="rename">
                     <div class="card-body">
                         <p class="card-text">Упаковка, переупаковка, паллетирование груза к международной перевозке</p>
                     </div>
