--- a/src/dev-html/cooperation.html
+++ b/src/dev-html/cooperation.html
@@ -1,12 +1,12 @@
 <div class="container-fluid">
     <div class="container">
-        <div class="sotrudnichestvo">
+        <div class="cooperation">
 
-            <h1 class="sotrudnichestvo-text">Готовы к сотрудничеству?</h1>
-            <h1 class="sotrudnichestvo-text-title"> Зарегистрируйте груз!</h1>
+            <h1 class="cooperation-text">Готовы к сотрудничеству?</h1>
+            <h1 class="cooperation-text-title"> Зарегистрируйте груз!</h1>
             <div class="line"> __________________ </div>
-            <div class="sotrudnichestvo-info">
-                <h1 class="sotrudnichestvo-info-text"> • Для того, чтобы начать сотрудничество, необходимо оформить груз
+            <div class="cooperation-info">
+                <h1 class="cooperation-info-text"> • Для того, чтобы начать сотрудничество, необходимо оформить груз
                     указав информацию о содержимом груза, его стоимость и количество. А так-же прикрепив фотографии к
                     заявке.
                     • Если требуется проверка товара на соответсвие количеству, то при оформлении груза на нашем сайте
@@ -16,9 +16,9 @@
                     номером Вашего заказа у нас на сайте, для каждой внешней коробки, чтобы мы смогли определить именно
                     Ваш груз. Если у Вас нет возможности сделать это самостоятельно, то попросите об этом своего
                     поставщика.</h1>
-                <div class="sotrudnichestvo-pogruzka"></div>
-                <div class="sotrudnichestvo-dostavka"></div>
-                <h1 class="sotrudnichestvo-info-text"> • Для того, чтобы начать сотрудничество, необходимо оформить
+                <div class="cooperation-pogruzka"></div>
+                <div class="cooperation-delivery"></div>
+                <h1 class="cooperation-info-text"> • Для того, чтобы начать сотрудничество, необходимо оформить
                     груз
                     указав информацию о содержимом груза, его стоимость и количество. А так-же прикрепив фотографии к
                     заявке.
