--- a/src/dev-html/question.html
+++ b/src/dev-html/question.html
@@ -5,7 +5,7 @@
             <h1 class="choice-text">Почему стоит выбрать именно нас?</h1>
             <div class="line"> __________________ </div>
         </div>
-        <div class="container-vopros row">
+        <div class="container-question row">
 
             <div class="col-md-8 col-sm-12">
                 <div class="accordion" id="accordionPanelsStayOpenExample">
@@ -124,7 +124,7 @@
             </div>
             <div class="col-md-4 col-sm-12">
 
-                <div class="container-vopros-dop">
+                <div class="container-question-dop">
                     <div class="text-question"> Остались вопросы?</div>
                     <div class="text-question-time">Оставьте заявку и наш менеджер ответит вам в ближайшее время</div>
                     <div class="input-box">
@@ -145,7 +145,7 @@
                     </div>
 
                     <div class="input-box">
-                        <button type="button" class="btn btn-vopros"> <div class="text-vopros">Отправить запрос<i class="right2"></i>  <div> </button>
+                        <button type="button" class="btn btn-question"> <div class="text-question">Отправить запрос<i class="right2"></i>  <div> </button>
                         </div>
                 </div>
             </div>
