--- a/src/dev-html/services.html
+++ b/src/dev-html/services.html
@@ -1,17 +1,17 @@
 <div class="container-fluid">
     <div class="container">
-        <div class="container-uslugi">
-            <h2 class="text-uslugi">Услуги</h2>
+        <div class="container-services">
+            <h2 class="text-services">Услуги</h2>
             <div class="line"> __________________ </div>
             <div class="multiple-items2">
                 <div class="carousel-item">
-                    <div class="card-uslugi">
-                        <div class="uslugi-foto">
+                    <div class="card-services">
+                        <div class="services-foto">
 
                             <div class="card-body">
-                                <h5 class="card-title-uslugi">Выкуп товара </h5>
+                                <h5 class="card-title-services">Выкуп товара </h5>
 
-                                <p class="card-text-uslugi">Компания - это полный комплекс логистических услуг по
+                                <p class="card-text-services">Компания - это полный комплекс логистических услуг по
                                     доставке
                                     грузов
                                     из Китая в Украину - сборные грузы и цельные товарные партии, услуги посредника
@@ -24,13 +24,31 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <div class="card-uslugi">
-                        <div class="uslugi-foto2">
+                    <div class="card-services">
+                        <div class="services-foto2">
 
                             <div class="card-body">
-                                <h5 class="card-title-uslugi">Выкуп товара </h5>
+                                <h5 class="card-title-services">Страховка груза
+                                </h5>
 
-                                <p class="card-text-uslugi">Компания - это полный комплекс логистических услуг по
+                                <p class="card-text-services">Компания - это полный комплекс логистических услуг по
+                                    доставке грузов из Китая в Россию - сборные грузы и цельные товарные партии, услуги
+                                    посредника ТаоБао, КАРГО Китай-Erhfbyf. </p>
+                                <a href="#" class="btn btn-outline-warning">Подробнее</a>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="card-services">
+                        <div class="services-foto3">
+
+                            <div class="card-body">
+                                <h5 class="card-title-services">Аренда склада
+                                </h5>
+
+                                <p class="card-text-services">Компания - это полный комплекс логистических услуг по
                                     доставке
                                     грузов
                                     из Китая в Украину - сборные грузы и цельные товарные партии, услуги посредника
@@ -43,32 +61,13 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <div class="card-uslugi">
-                        <div class="uslugi-foto3">
+                    <div class="card-services">
+                        <div class="services-foto4">
 
                             <div class="card-body">
-                                <h5 class="card-title-uslugi">Выкуп товара </h5>
+                                <h5 class="card-title-services">Перевод денежных средств </h5>
 
-                                <p class="card-text-uslugi">Компания - это полный комплекс логистических услуг по
-                                    доставке
-                                    грузов
-                                    из Китая в Украину - сборные грузы и цельные товарные партии, услуги посредника
-                                    ТаоБао,
-                                    КАРГО Китай-Украина. </p>
-                                <a href="#" class="btn btn-outline-warning">Подробнее</a>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="card-uslugi">
-                        <div class="uslugi-foto4">
-
-                            <div class="card-body">
-                                <h5 class="card-title-uslugi">Выкуп товара </h5>
-
-                                <p class="card-text-uslugi">Компания - это полный комплекс логистических услуг по
+                                <p class="card-text-services">Компания - это полный комплекс логистических услуг по
                                     доставке
                                     грузов
                                     из Китая в Украину - сборные грузы и цельные товарные партии, услуги посредника
