--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,11 @@
         @@include('dev-html/price.html',{})
 
         @@include('dev-html/about-we.html',{})  
-        @@include('dev-html/dostavka.html',{})
-        @@include('dev-html/uslugi.html',{})
-        @@include('dev-html/o-kompanii.html',{})
-        @@include('dev-html/voprosy.html',{})
-        @@include('dev-html/sotrydnichestvo.html',{})
+        @@include('dev-html/delivery.html',{})
+        @@include('dev-html/services.html',{})
+        @@include('dev-html/about-company.html',{})
+        @@include('dev-html/question.html',{})
+        @@include('dev-html/cooperation.html',{})
 
        
 
