--- a/src/dev-html/delivery.html
+++ b/src/dev-html/delivery.html
@@ -1,12 +1,12 @@
 <div class="container-fluid">
     <div class="container">
-    <div class="dostavka-container">
+    <div class="delivery-container">
         <div class="multiple-items">
             <div class="carousel-item">
                 <div class="card2">
                     <img src="../img/cardavto.png" class="card-img-top" alt="cardavto">
                     <div class="card-body">
-                        <h5 class="card-title-dostavka">Авто - обычная</h5>
+                        <h5 class="card-title-delivery">Авто - обычная</h5>
                         <div class="container-box">
                             <div class="text-box"><i class="calendar"></i> 9-15 дней</div>
                             <div class="text-box"><i class="box"></i> от 5кг</div>
@@ -21,7 +21,7 @@
                 <div class="card2">
                     <img src="../img/cardavto2.png" class="card-img-top" alt="cardavto2">
                     <div class="card-body">
-                        <h5 class="card-title-dostavka">Авто - ускоренная
+                        <h5 class="card-title-delivery">Авто - ускоренная
                         </h5>
                         <div class="container-box">
                             <div class="text-box"><i class="calendar"></i> 9-15 дней</div>
@@ -38,7 +38,7 @@
                 <div class="card2">
                     <img src="../img/cardlitak.png" class="card-img-top" alt="cardlitak">
                     <div class="card-body">
-                        <h5 class="card-title-dostavka">Авиа
+                        <h5 class="card-title-delivery">Авиа
                         </h5>
                         <div class="container-box">
                             <div class="text-box"><i class="calendar"></i> 9-15 дней</div>
@@ -55,7 +55,7 @@
                 <div class="card2">
                     <img src="../img/cardgd.png" class="card-img-top" alt="cardgd">
                     <div class="card-body">
-                        <h5 class="card-title-dostavka">Ж/Д</h5>
+                        <h5 class="card-title-delivery">Ж/Д</h5>
                         <div class="container-box">
                             <div class="text-box"><i class="calendar"></i> 9-15 дней</div>
                             <div class="text-box"><i class="box"></i> от 5кг</div>
@@ -73,7 +73,7 @@
                 <div class="card2">
                     <img src="../img/cardkorabl.png" class="card-img-top" alt="cardkorabl">
                     <div class="card-body">
-                        <h5 class="card-title-dostavka">Море
+                        <h5 class="card-title-delivery">Море
                         </h5>
                         <div class="container-box">
                             <div class="text-box"><i class="calendar"></i> 9-15 дней</div>
