--- a/src/dev-html/firstscreen.html
+++ b/src/dev-html/firstscreen.html
@@ -14,7 +14,7 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
 
-                <img src="../img/foto1.png" class="d-block w-100" alt="rename">
+                <img src="../img/direct.png" class="d-block w-100" alt="rename">
                 <div class="carousel-caption d-none d-md-block">
                     <div class="btn-two">
                         <button type="button" class="btn btn-carusel"> <div class="text-carusel">Рассчитать стоимость<i class="right1"></i>  <div> </button>
@@ -25,7 +25,7 @@
             </div>
             <div class="carousel-item">
                 
-                    <img src="../img/foto2.png" class="d-block w-100" alt="rename">
+                    <img src="../img/guarantee.png" class="d-block w-100" alt="rename">
                     <div class="carousel-caption d-none d-md-block">
                         <div class="btn-two">
                             <button type="button" class="btn btn-carusel"> <div class="text-carusel">Рассчитать стоимость<i class="right1"></i>  <div> </button>
@@ -37,7 +37,7 @@
             </div>
             <div class="carousel-item">
 
-                <img src="../img/foto3.png" class="d-block w-100" alt="rename">
+                <img src="../img/ransom.png" class="d-block w-100" alt="rename">
                 <div class="carousel-caption d-none d-md-block">
                     <div class="btn-two">
                         <button type="button" class="btn btn-carusel"> <div class="text-carusel">Рассчитать стоимость<i class="right1"></i>  <div> </button>
@@ -49,7 +49,7 @@
             </div>
             <div class="carousel-item">
 
-                <img src="../img/foto4.png" class="d-block w-100" alt="rename">
+                <img src="../img/express.png" class="d-block w-100" alt="rename">
                 <div class="carousel-caption d-none d-md-block">
                     <div class="btn-two">
                         <button type="button" class="btn btn-carusel"> <div class="text-carusel">Рассчитать стоимость<i class="right1"></i>  <div> </button>
