--- a/src/dev-html/price.html
+++ b/src/dev-html/price.html
@@ -40,7 +40,7 @@
                     <input type="text" id="lname" name="lname" placeholder="Код ТН ВЭД:">
                 </div>
                 <div class="input-box">
-                    <button type="button" class="btn btn-vopros"> <div class="text-vopros">Отправить запрос<i class="right2"></i>  <div> </button>
+                    <button type="button" class="btn btn-question"> <div class="text-question">Отправить запрос<i class="right2"></i>  <div> </button>
                     </div>
             </form>
             <div class="img-box">
